Lots of bug fixes, feature additions, etc... -Fixed issues with Wallbase provider not returning results anymore (rewalls brings back more items if you don't use a query string, it used to be you couldn't provide an empty search string, now you can) - Wallbase also now supports paging, so it will bring back more then just the first page worth of results.  It also has some performance improvement code which runs some operations in parallel.
-Added feature so that providers can now have their own settings windows (see the code for Google Imags provider, more to come)
  -> as part of that I tweaked the layout of the options page

-Search settings now have their own class which is passed around.  This will make things cleaner in the future if we add more search options.
-Broke up some of the strong coupling that was in place between Provider and Picture managers
-Added better naming system for providers so that it uses attributes on the provider class now.
-Tweaked XMLSerializer to be more flexible
-Search results are now cached which should improve performance when coming from a cold start (especially for wallbase since it's still kind of slow)

-Note that your old settings files probably won't work, so just start with a clean one.

--- a/Pulse/Pulse/Properties/Resources.resx
+++ b/Pulse/Pulse/Properties/Resources.resx
@@ -210,6 +210,9 @@
   <data name="OptionsOlder" xml:space="preserve">
     <value>Older</value>
   </data>
+  <data name="OptionsPreFetch" xml:space="preserve">
+    <value>Pre Fetch</value>
+  </data>
   <data name="OptionsRefreshInterval" xml:space="preserve">
     <value>Change picture every:</value>
   </data>
@@ -217,10 +220,10 @@
     <value>Changes will be applied after restarting the program</value>
   </data>
   <data name="OptionsSearch" xml:space="preserve">
-    <value>Keyword</value>
+    <value>Search</value>
   </data>
   <data name="OptionsSearchBox" xml:space="preserve">
-    <value>Type keyword here</value>
+    <value>keyword(s)</value>
   </data>
   <data name="OptionsSearchResults" xml:space="preserve">
     <value>Pictures found:</value>
@@ -236,6 +239,12 @@
   </data>
   <data name="OptionsWindowTitle" xml:space="preserve">
     <value>Pulse options</value>
+  </data>
+  <data name="ProviderSettings" xml:space="preserve">
+    <value>Settings</value>
+  </data>
+  <data name="ProviderSettingsTitle" xml:space="preserve">
+    <value>Provider Settings for </value>
   </data>
   <data name="Spring" xml:space="preserve">
     <value>Spring</value>
