--- a/Pulse/Pulse/Properties/Resources.resx
+++ b/Pulse/Pulse/Properties/Resources.resx
@@ -120,6 +120,9 @@
   <data name="Autumn" xml:space="preserve">
     <value>Autumn</value>
   </data>
+  <data name="BanImage" xml:space="preserve">
+    <value>Ban Image</value>
+  </data>
   <data name="Close" xml:space="preserve">
     <value>Close</value>
   </data>
@@ -251,6 +254,9 @@
   </data>
   <data name="Summer" xml:space="preserve">
     <value>Summer</value>
+  </data>
+  <data name="ViewCacheFolder" xml:space="preserve">
+    <value>Open Cache Folder</value>
   </data>
   <data name="Winter" xml:space="preserve">
     <value>Winter</value>
