Lots of updates, though some of the features are still under development.  Most of the wallbase.cc options I wanted to add are in here now except for auth/NSFW.
Some Changes:
-Added option to have Pulse change wallpaper on app startup
-Output options are now plugins and are represented by a new tab on the Options window.  You can even turn off wallpaper setting if you want... since it's a plugin also.  None of the outputs have settings yet as they are still a WIP.
-Fixed issue where the Logon background image setter sometimes put the image in the "redirected" location.  Also fixed the issue where multiple elevated executions were required to get it up and running, now it just requires one on activation (activation is from the Outputs tab, just activate and apply/ok).
-Got rid of all the WinAPI calls from the main pulse libraries.  Of course we have them in the plugins but there was no need for these to be in the main libraries.
-Changed the way providers are stored in settings (yes, you can't every, no not every, reuse your old settings file)

--- a/Pulse/Pulse/Properties/Resources.ru-RU.resx
+++ b/Pulse/Pulse/Properties/Resources.ru-RU.resx
@@ -174,6 +174,9 @@
   <data name="OptionsDownloadAutomatically" xml:space="preserve">
     <value>Загружать изображения автоматически</value>
   </data>
+  <data name="OptionsDownloadOnStart" xml:space="preserve">
+    <value>Download Picture on Startup</value>
+  </data>
   <data name="OptionsFilter" xml:space="preserve">
     <value>Фильтр</value>
   </data>
@@ -212,6 +215,9 @@
   </data>
   <data name="OptionsOlder" xml:space="preserve">
     <value>Старше</value>
+  </data>
+  <data name="OptionsOutputs" xml:space="preserve">
+    <value>Outputs</value>
   </data>
   <data name="OptionsPreFetch" xml:space="preserve">
     <value>Pre Fetch</value>
