--- a/Pulse/Providers/wallbase/Properties/Resources.resx
+++ b/Pulse/Providers/wallbase/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="wallbasefav" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\wallbasefav.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="wallhaven" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\wallhaven.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
